various: avoid primitive wrapper constructors
The constructors of primitive wrapper classes like new Integer(n)
are deprecated at Java 9 for eventual removal from the JDK.
Adjust the code to replace their usage by equivalent static methods.

This commit picks up various packages with just a few changes.